Open external links in new window/tab
Note that this is not my preferred behavior, but I can understand
why others like/expect it.

Give ``<a>`` elements a class of ``new-window`` to trigger this
behavior.

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,7 +2,10 @@
   url: 'mailto:openelections@gmail.com'
 - title: Google Group
   url: https://groups.google.com/forum/?fromgroups#!forum/openelections
+  class: 'new-window'
 - title: Documentation
   url: http://docs.openelections.net/
+  class: 'new-window'
 - title: OpenElections on GitHub
   url: https://github.com/openelections
+  class: 'new-window'
